# fact-py-cpp

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
cpp/: BUILD.bazel  factorial.cc  factorial.h  factorial_main.cc
python/: BUILD.bazel  benchmark.py
