module(
    name = "factorial",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc",     version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)
